Fix box shadow on mobile

--- a/_sass/bootstrap-sass/_cover.scss
+++ b/_sass/bootstrap-sass/_cover.scss
@@ -44,8 +44,8 @@
     width: 100%;
     height: 100%; /* For at least Firefox */
     min-height: 100%;
-    -webkit-box-shadow: inset 0 0 100px rgba(255,255,255,1);
-            box-shadow: inset 0 0 100px rgba(255,255,255,1);
+    -webkit-box-shadow: inset 0 0 50px rgba(255,255,255,1);
+            box-shadow: inset 0 0 50px rgba(255,255,255,1);
   }
   .site-wrapper-inner {
     display: table-cell;
